--- a/signups/templates/signup.html
+++ b/signups/templates/signup.html
@@ -10,7 +10,9 @@
 	If you haven't yet registered, click <a href="/accounts/register/">here</a>.</p> 
 	<br><br><br><br><br><br><br><br><br><br>
 	<p style="font-weight:normal;color:#B42BD6;letter-spacing:-1pt;word-spacing:2pt;font-size:30px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">
-   My name is Rahul, I have developed this website. To know about me more, click <a target="blank" href="http://rahul91.github.io" >here</a></h1>.</p>
+   My name is Rahul, I have developed this website. To know about me more, click <a target="blank" href="http://rahul91.github.io" >here</a>.</p>
+   	<p style="font-weight:normal;color:#B42BD6;letter-spacing:-1pt;word-spacing:2pt;font-size:30px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">
+    <a target="blank" href="http://rahul91.github.com/Django_IPL" >Source Code</a>.</p>
 </div>
 </body>
 </html>
