--- a/signups/templates/base.html
+++ b/signups/templates/base.html
@@ -12,7 +12,7 @@
 
 
     <div id="content">
-    
+	<!--div>    
 	{% if messages %}
 	<ul class="messages">
 	    {% for message in messages %}
@@ -20,7 +20,7 @@
 	    {% endfor %}
 	</ul>
 	{% endif %}
-        
+        </div-->
         {% block content %}  {% endblock %}
 	</div>
 
