--- a/signups/templates/invalid_login.html
+++ b/signups/templates/invalid_login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h2>Your login details are invalid!</h2>
-  <p>Click <a href="/accounts/login/">here</a> to login again.</p>
+  <h2 style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:64px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Your login details are invalid!</h2>
+  <p style="font-weight:normal;color:#AAAAAA;letter-spacing:1pt;word-spacing:2pt;font-size:40px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Click <a href="/accounts/login/">here</a> to login again.</p>
 
 {% endblock %}
