--- a/signups/templates/login.html
+++ b/signups/templates/login.html
@@ -1,33 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div style="width=1px">
-<div style="width=700px; auto;">
+
   {% if form.errors %}
     <p class="error">Sorry, that's not a valid username or password</p>
   {% endif %}
-
-  <form action="/accounts/auth/" method="post">{% csrf_token %}
-    <label for="username"style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:20px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">User name:</label>
-    <input type="text" name="username" value="" id="username">
-    <label for="password" style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:20px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Password:</label>
-    <input type="password" name="password" value="" id="password">
-
-    <input type="submit" value="Login" style="border-radius: 28px;
-  background: #eeeeee;
-  cursor:pointer;
-  font-family: Arial;
-  color: #000000;
-  font-size: 20px;
-  padding: 05px 30px 05px 30px;
- "/>
-
-
  <p style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:64px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">
  Enter your Username and Password.
  </p>
     
+
+  <form action="/accounts/auth/" method="post">{% csrf_token %}
+  <!--div style="width: 900px;height: 100px;border: 1px rgb(3, 3, 3) solid;background: rgb(100, 240, 213);"-->
+    <label for="username"style="font-weight:normal;color:#000000;letter-spacing:1pt;word-spacing:2pt;font-size:25px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Username:</label>
+    <input type="text" name="username" value="" id="username">
+    <label for="password" style="font-weight:normal;color:#000000;letter-spacing:1pt;word-spacing:2pt;font-size:25px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Password:</label>
+    <input type="password" name="password" value="" id="password">
+
+    <input type="submit" value="Login" style="border-radius:4px;
+    background-color:#e4685d;
+  border:1px solid #ffffff;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:35px;
+  padding:2px 18px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35;"/>
   </form>
-  </div>
-</div>
 {% endblock %}
