--- a/signups/templates/logout.html
+++ b/signups/templates/logout.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-  <p style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:64px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Logged Out
-  <p>Click <a href="/accounts/login/">here</a> to login again</p>
-  <p>Click <a href="/">here</a> to go to home page</p>
+  <p style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:64px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Logged Out !!
+  <div style="font-weight:normal;color:#000000;letter-spacing:-1pt;word-spacing:2pt;font-size:30px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">Click <a href="/accounts/login/">here</a> to login again<br>
+  Click <a href="/">here</a> to go to home page</div>
   </p>
 {% endblock %}
