--- a/signups/templates/signup.html
+++ b/signups/templates/signup.html
@@ -1,5 +1,4 @@
 <!doctype html>
-{% load staticfiles %}
 <html>
 <head>
 <title>Home Page</title>
@@ -7,9 +6,11 @@
 <body>
 <div>
 	<p style="font-weight:normal;color:#27D6D6;letter-spacing:1pt;word-spacing:2pt;font-size:64px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Register to Suscribe to latest SCORE from Pepsi ILP 2015.
-	If you haven't yet registered, click <a href="/accounts/register/">here</a>.</p> 
-	<br><br><br><br><br><br><br><br><br><br>
-	<p style="font-weight:normal;color:#B42BD6;letter-spacing:-1pt;word-spacing:2pt;font-size:30px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">
+	If you haven't yet registered, click <a href="/accounts/register/">here</a>.
+	<div style="font-weight:normal;color:#AAAAAA;letter-spacing:1pt;word-spacing:2pt;font-size:40px;text-align:left;font-family:trebuchet MS, sans-serif;line-height:1;">Already Registered?? Click <a href="/accounts/login/">here</a> to login</div>
+	</p> 
+	<br><br><br><br><br><br><br>
+	<p style="font-weight:normal;color:#000000;letter-spacing:-1pt;word-spacing:2pt;font-size:30px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">
    My name is Rahul, I have developed this website. To know about me more, click <a target="blank" href="http://rahul91.github.io" >here</a>.</p>
    	<p style="font-weight:normal;color:#27D6D6;word-spacing:2pt;font-size:15px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:2;">
     <a target="blank" href="https://github.com/Rahul91/Django_IPL" >Source Code</a>.</p>
