--- a/signups/templates/loggedin_2.html
+++ b/signups/templates/loggedin_2.html
@@ -163,7 +163,7 @@ var xmlhttp;
         else if ((Notification.permission === "granted")) 
         {
           //alert("There is no Live IPL Match !!");
-        var notification = new Notification("No IPL Match is Live right now!!!");
+        //var notification = new Notification("No IPL Match is Live right now!!!");
         }
       //alert("There is no Live IPL Match !!");
 
